Redid ScoreGame with prof's old method signature; getHmGameHands private